...
  }

  return (
    <div className="auth-nav">
      <p>
        <Link href="/signup" className="link">
          Sign up
        </Link>
        {" or "}
        <Link href="/signin" className="link">
          Sign in
        </Link>
      </p>
...
